--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pylint `find . -name "*.py" | xargs`
